--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <aside class="intro">
                 <h1>Alfian <div class="hi">Eza</div> Putra </h1> 
                 <p class="introtext">
-                    My name is Eza, i have 2 years of experience as a developer on ambari platform, which simplifies msanagement of big data stacks such as Hadoop, Zookeeper, Hive, HBase, Airflow, and few more services. I am also a student at Unicversitas Terbuka majoring in Information Systems. I have a strong interest in algorithms, software development, and big data. With my Professional experience and what i have learned, i hope to contribute to your company and grow together. 
+                    My name is Eza, i have 2 years of experience as a developer on ambari platform, which simplifies management of big data stacks such as Hadoop, Zookeeper, Hive, HBase, Airflow, and few more services. I am also a student at Unicversitas Terbuka majoring in Information Systems. I have a strong interest in algorithms, software development, and big data. With my Professional experience and what i have learned, i hope to contribute to your company and grow together. 
                 </p>
             </aside>    
 
@@ -41,17 +41,18 @@
         <div class="s2">
             <div class="s3">
                 <li><h2>SMK N 3 Yogyakarta</h2></li>
-                <p class="txt"><div class="year">2016-2019  </div>  Teknik Komputer dan Jaringan</p>
+                <b><p class="txt"><div class="year">2016-2019  </div>  Computer and Network Engineering</p></b>
             </div>
             <div class="s3">
                 <li><h2>Universitas Terbuka</h2></li>
-                <p class="txt"><div class="year">2024  </div> Sistem Informasi</p>
+                <b><p class="txt"><div class="year">2024-Present  </div> Information Systems</p></b>
             </div>
         </div>
         <div class="s2">
             <div class="s3">
                 <li><h2>Solusi 247</h2></li>
-                <p class="txt"><div class="year">2022-2024  </div>  Developer</p>
+                <b><p class="txt"><div class="year">2022-2024  </div>  Developer</p></b>
+                <p class="desc">In this role i have responsibility to develop ambari, Make a ambari stack based on latest service version, Porting Python 2 to Python 3, Fixing error related to service installation and integration.</p>
             </div>
     </div>
     </section>
@@ -192,32 +193,35 @@
     <section class="s1">
         <h1><div class="chap">Portfolio</div></h1>
         <div class="grid">
-            <div class="square">
-                Data <br> Pipeline
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/big-data');" >
+                Big Data
             </div>
-            <div class="square">
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/python-design-pattern');" >
                 Design <br> Pattern
             </div>
-            <div class="square">
-                DSA</h3>
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/python-dsa');" >
+                DSA  <br> --on progress-- </h3>
             </div>
-            <div class="square">
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/machine-learning');" >
                 Machine <br> Learning
             </div>
-            <div class="square">
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/resume-landing-page');">
                 Resume <br> Landing Page
             </div>
-            <div class="square">
-                Server <br> Administration
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/VM-and-Server-administration');" >
+                VM & Server Administration
             </div>
-            <div class="square">
-                Terraform <br> on GCP
+            <div class="square"  onclick="window.open('https://github.com/alfian-putra/terraform-on-google-cloud');" >
+                Terraform on <br> Google Cloud <br> --on progress--
             </div>
-            <div class="square" onclick="window.open('https://github.com/alfian-putra/edfs','mywindow');" >
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/edfs');" >
                 EDFS
             </div>
-            <div class="square" onclick="window.open('https://github.com/alfian-putra/spring-security-auth','mywindow');" >
-                Spring Security <br> Authentication
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/spring-security-auth');" >
+                Spring Security <br> (Authentication)
+            </div>
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/external-auth');" >
+                Spring Security <br> (OAuth2  Google)
             </div>
           </div>
           <p class="browser-message">Your browser doesn't support aspect-ratio yet. To see this demo, use <a href="https://caniuse.com/?search=aspect-ratio">a browser that supports aspect-ratio</a></p>
@@ -247,10 +251,10 @@
     <section class="s1 Social Media">
         <h1><div class="chap">Social Media</div></h1>
         <div class="allsoc">
-            <img src="soc-icon/github.svg" class="icon">  
-            <img src="soc-icon/kaggle.svg" class="icon">  
-            <img src="soc-icon/leetcode.svg" class="icon">  
-            <img src="soc-icon/linkedin.svg" class="icon">     
+            <img src="soc-icon/github.svg" class="icon"  onclick="window.open('https://github.com/alfian-putra/');"">  
+            <img src="soc-icon/leetcode.svg" class="icon" onclick="window.open('https://leetcode.com/u/AlfianEP/');" >
+            <img src="soc-icon/linkedin.svg" class="icon" onclick="window.open('https://www.linkedin.com/in/alfian-eza-putra-481005289/');" >
+            <img src="soc-icon/gmail.svg" class="icon" onclick="window.open('mailto:alfianezaputra@gmail.com');" >
         </div>
     </sections>
 </body>
