test fixing image view

--- a/index.html
+++ b/index.html
@@ -229,15 +229,15 @@
     <section class="s1 certificate">
         <h1><div class="chap">Certificate</div></h1>
         <div id="certi">
-            <img src="/certificate/aws.jpg" id="ce">
-            <img src="/certificate/dp.jpg" id="ce">
-            <img src="/certificate/ml.png" id="ce">
-            <img src="/certificate/nodejs.jpg" id="ce">
-            <img src="/certificate/oauth2.jpg" id="ce">
-            <img src="/certificate/pd.png" id="ce">
-            <img src="/certificate/py.png" id="ce">
-            <img src="/certificate/rm.png" id="ce">
-            <img src="/certificate/vsga.jpg" id="ce">
+            <img src="./certificate/aws.jpg" id="ce">
+            <img src="./certificate/dp.jpg" id="ce">
+            <img src="./certificate/ml.png" id="ce">
+            <img src="./certificate/nodejs.jpg" id="ce">
+            <img src="./certificate/oauth2.jpg" id="ce">
+            <img src="./certificate/pd.png" id="ce">
+            <img src="./certificate/py.png" id="ce">
+            <img src="./certificate/rm.png" id="ce">
+            <img src="./certificate/vsga.jpg" id="ce">
         </div>
         <script>
             var ce = document.getElementById("certi")
