--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
             <div class="square" onclick="window.open('https://github.com/alfian-putra/external-auth');" >
                 Spring Security <br> (OAuth2  Google)
             </div>
+            <div class="square" onclick="window.open('https://github.com/alfian-putra/flask_react_fetch_api');" >
+                React Flask <br> Fetching API
+            </div>
           </div>
           <p class="browser-message">Your browser doesn't support aspect-ratio yet. To see this demo, use <a href="https://caniuse.com/?search=aspect-ratio">a browser that supports aspect-ratio</a></p>
     </section>
