--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 React Flask <br> Fetching API
             </div>
             <div class="square" onclick="window.open('https://github.com/alfian-putra/springboot_note/blob/main/README.md');" >
-                SpringBoot Note
+                SpringBoot <br> Note
             </div>
           </div>
           <p class="browser-message">Your browser doesn't support aspect-ratio yet. To see this demo, use <a href="https://caniuse.com/?search=aspect-ratio">a browser that supports aspect-ratio</a></p>
